Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -35,7 +35,7 @@ nav{
 
 .logo{
     /* color: rgb(201, 201, 201); */
-    color: white;
+    /* color: white; */
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 20px;
@@ -53,13 +53,13 @@ nav{
 
 .nav-links a{
     /* color: rgb(201, 201, 201); */
-    color: white;
+    color: black;
     text-decoration: none;
     letter-spacing: 3px;   
     /* font-weight: bold; */
     font-size: 14px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 0px;
+    padding-bottom: 20px;
 }
 
 .burger{
@@ -69,7 +69,7 @@ nav{
     width: 25px;
     height: 2px;
     /* background-color: rgb(201, 201, 201); */
-    background-color: white;
+    background-color: black;
     margin: 5px;
     transition: all 0.5s ease;
 }
@@ -270,14 +270,13 @@ html{
     width: 100%;
     color: white;
     font-family: Helvetica, sans-serif;
-    /* line-height: 160%; */
+    
     letter-spacing: 10px;
     font-size: 30px;
     text-align: left;
     padding-left: 25%;
     padding-right: 30%;
     text-transform: uppercase;
-    
 
     margin-top: auto;
     margin-bottom: auto;
